# deephalo

./: .gitignore  Documentation.docx  LICENSE  README.md  pyproject.toml  read_halo_extract_isotopes.py  result_iv.csv  test.py  tree.txt  ~$cumentation.docx
.history/: README_20250625084739.md  README_20250809111806.md  README_20250809175448.md  README_20250809175659.md  pyproject_20250225215829.toml  pyproject_20250324180032.toml  pyproject_20250327160608.toml  pyproject_20250402172341.toml  pyproject_20250402174907.toml  pyproject_20250402174946.toml  pyproject_20250624171609.toml  pyproject_20250809110312.toml  pyproject_20250809110549.toml  pyproject_20250809110929.toml  pyproject_20250809111032.toml  pyproject_20250809111220.toml  pyproject_20250809112817.toml  pyproject_20250809113856.toml  pyproject_20250809114839.toml  pyproject_20250809114949.toml  pyproject_20250809115139.toml  pyproject_20250809115144.toml  pyproject_20250809115149.toml  pyproject_20250809115209.toml
.history/DeepHalo/: command_line_20250210105510.py  command_line_20250210145128.py  command_line_20250210145222.py  (+101 more)
DeepHalo/: command_line.py  config.toml  main.py  model_test.py  parameters.py
DeepHalo.egg-info/: PKG-INFO
HaloAnalyzer/: command_line.py  commond_line.py  config.toml  main.py  model_test.py  output.mgf  parameters.py  t.py  test.py  vis.py
HaloAnalyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deephalo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: Documentation.docx  ~$cumentation.docx
(+1633 files in other folders)
