#This section declares what are your build system dependencies, and which library will be used to actually do the packaging.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HaloAnalyzer"
version = "0.1.0"
dependencies = [
    'numpy == 1.22',
    'pillow == 9.5.0',
    'pyparsing == 3.0.6',
    'tensorflow == 2.10.0', 
    'molmass',
    'matplotlib',
    'scikit-learn',
    'pyteomics',
    'asari-metabolomics',
    'streamlit',
    'streamlit-elements',
    'tomli',
    'tomli-w',
    'lxml',
    'pydot',
    'urllib3 == 1.26.16',
    'bokeh == 3.1.1',
    'importlib_resources',
]

[project.scripts]
halo = "HaloAnalyzer.commond_line:main"

